UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Trigger_Validation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use this Custom setting to handle the triggers.</description>
    <fields>
        <fullName>BidLineItem_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>BidLineItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDC_Change_LineItem_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NDC Change LineItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDC_Change_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NDC Change Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Product_Wac_LineItem_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Product Wac LineItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_WacPricing_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New WacPricing Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHS_LineItem_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PHS LineItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phs_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phs Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WacChangeLineItemTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WacChangeLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WacChangeTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WacChangeTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Validation</label>
</CustomObject>